hard-gists/3488502/run.log
=== Docker Run Log for 3488502 ===
Started at: Mi 29. Okt 13:53:55 CET 2025

[2025-10-29 13:53:55] START: Running container for 3488502
[2025-10-29 13:53:56] SUCCESS: Container e11703ed74ebe5e59b899c85c45d0b97db62e3a96bb49663f1509fd63f2b92ac started for 3488502
=== Container logs for 3488502 ===
  File "/snippet.py", line 59
    def __getitem__(self, (x, y)):
                          ^^^^^^
SyntaxError: Function parameters cannot be parenthesized
=== End of logs for 3488502 ===
[2025-10-29 13:53:58] INFO: Container e11703ed74ebe5e59b899c85c45d0b97db62e3a96bb49663f1509fd63f2b92ac has stopped
